# aztec-packages

barretenberg/bb_rs/: Cargo.toml  README.md  build.rs  copy-headers.sh  ios.toolchain.cmake
barretenberg/bb_rs/scripts/: README.md  fix_bindings.py  fix_bindings.sh  patcher.sh
barretenberg/bb_rs/src/: lib.rs
barretenberg/bb_rs/src/barretenberg_api/: acir.rs  blake2s.rs  common.rs  mod.rs  models.rs  pedersen.rs  poseidon.rs  poseidon2.rs  schnorr.rs  srs.rs  traits.rs
barretenberg/bb_rs/src/barretenberg_api/tests/: acir.rs  blake2s.rs  mod.rs
barretenberg/bb_rs/src/types/: mod.rs
barretenberg/cpp/: CMakeLists.txt  CMakePresets.json  bootstrap.sh
barretenberg/cpp/src/barretenberg/bb/: cli.cpp
barretenberg/cpp/src/barretenberg/client_ivc/: client_ivc.cpp  client_ivc.test.cpp
barretenberg/cpp/src/barretenberg/common/: benchmark.hpp  mem.hpp  op_count.hpp  thread.hpp
barretenberg/cpp/src/barretenberg/execution_trace/: execution_trace.cpp  execution_trace.hpp
barretenberg/cpp/src/barretenberg/flavor/: flavor.hpp
barretenberg/cpp/src/barretenberg/goblin/: goblin.hpp
barretenberg/cpp/src/barretenberg/polynomials/: backing_memory.cpp  backing_memory.hpp
barretenberg/cpp/src/barretenberg/protogalaxy/: protogalaxy_prover_impl.hpp
barretenberg/cpp/src/barretenberg/srs/: c_bind.cpp
barretenberg/cpp/src/barretenberg/stdlib_circuit_builders/: ultra_flavor.hpp
barretenberg/cpp/src/barretenberg/sumcheck/: sumcheck.hpp  sumcheck_round.hpp
barretenberg/cpp/src/barretenberg/ultra_honk/: decider_prover.cpp  decider_proving_key.cpp  decider_proving_key.hpp  (+1 more)
(+13 files in other folders)
